# MediBot-AI

./: .gitignore  CONTRIBUTING.md  Dockerfile  HEALTH_INFORMATION.md  LICENSE  README.md  SETUP_GUIDE.md  app.py  docker-compose.yml  enhanced_webapp.py  pyproject.toml  render.yaml  requirements.txt
Medical-Chatbot-master/src/: helper.py
static/: manifest.json  robots.txt  style.css  sw.js
templates/: 404.html  chat.html  index.html
